[gd_scene load_steps=4 format=3 uid="uid://m0mgrpx0ja8or"]

[ext_resource type="Script" uid="uid://nx075c1lear6z" path="res://algorithms/physicssimulation/collisiondetection/CollisionDetection.gd" id="1_43fd6"]
[ext_resource type="Script" uid="uid://e853i36n2bh2i" path="res://algorithms/physicssimulation/collisiondetection/CollisionObject.gd" id="2_3da93"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0xqxy"]
albedo_color = Color(0.3, 0.3, 0.3, 1)

[node name="CollisionDetection" type="Node3D"]
script = ExtResource("1_43fd6")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 8, 8)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 15, 0)
light_energy = 1.5

[node name="Environment" type="Node3D" parent="."]

[node name="Ground" type="CSGBox3D" parent="Environment"]
transform = Transform3D(15, 0, 0, 0, 0.1, 0, 0, 0, 15, 0, -0.05, 0)
material_override = SubResource("StandardMaterial3D_0xqxy")

[node name="CollisionObjects" type="Node3D" parent="."]

[node name="Object1" type="Node3D" parent="CollisionObjects"]
script = ExtResource("2_3da93")
object_color = Color(1, 0, 0, 1)
initial_position = Vector3(-3, 1, 0)
initial_velocity = Vector3(2, 0, 0)

[node name="Object2" type="Node3D" parent="CollisionObjects"]
script = ExtResource("2_3da93")
object_type = "cube"
object_color = Color(0, 1, 0, 1)
initial_position = Vector3(3, 1, 0)
initial_velocity = Vector3(-2, 0, 0)

[node name="Object3" type="Node3D" parent="CollisionObjects"]
script = ExtResource("2_3da93")
object_color = Color(0, 0, 1, 1)
initial_position = Vector3(0, 1, -3)
initial_velocity = Vector3(0, 0, 2)

[node name="Object4" type="Node3D" parent="CollisionObjects"]
script = ExtResource("2_3da93")
object_type = "cube"
object_color = Color(1, 1, 0, 1)
initial_position = Vector3(0, 1, 3)
initial_velocity = Vector3(0, 0, -2)

[node name="SpatialGrid" type="Node3D" parent="."]

[node name="CollisionInfo" type="Node3D" parent="."]

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -250.0
grow_vertical = 0

[node name="Label" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Collision Detection
- Broad phase: Spatial hashing grid
- Narrow phase: GJK/SAT algorithms
- Real-time collision visualization
- Use mouse to rotate camera"
horizontal_alignment = 1

[node name="ResetButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Reset Objects"

[node name="PauseButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Pause/Resume"

[node name="AlgorithmButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Switch Algorithm"

[node name="GridToggle" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Toggle Spatial Grid"
